--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -1,4 +1,4 @@
-@import './fonts';
+@import "./fonts";
 @import "variables";
 
 *,
@@ -21,33 +21,34 @@ body {
 
 h1,
 .h1 {
-  font-size: 36px;
-  line-height: 36px;
+  font-weight: bold;
+  font-size: 80px;
+  line-height: 98px;
 
   @media screen and (max-width: 1023.99px) {
-    font-size: 25px;
-    line-height: 25px;
+    font-size: 32px;
+    line-height: 39px;
   }
 
   @media screen and (max-width: 767.99px) {
-    font-size: 20px;
-    line-height: 20px;
+    font-size: 14px;
+    line-height: 17px;
   }
 }
 h2,
 .h2 {
-  font-size: 24px;
-  line-height: 29px;
+  font-size: 36px;
+  line-height: 44px;
+
+  @media screen and (max-width: 767.99px) {
+    font-size: 16px;
+    line-height: 20px;
+  }
 }
 
 p {
-  font-size: 14px;
+  font-size: 18px;
   line-height: 17px;
-}
-
-img {
-  width: 100%;
-  display: block;
 }
 
 a,
@@ -73,11 +74,16 @@ footer {
 
 .container {
   width: 100%;
-  max-width: 1230px;
+  max-width: 1570px;
   margin: 0 auto;
-  padding: 0 15px;
+  padding: 0 35px;
 
   @media screen and (max-width: 1023.99px) {
-    max-width: 730px;
+    max-width: 768px;
+  }
+  
+  @media screen and (max-width: 767.99px) {
+    max-width: 100%;
+    padding: 0 10px;
   }
 }
