--- a/src/html-components/Header/Nav/styles.scss
+++ b/src/html-components/Header/Nav/styles.scss
@@ -4,43 +4,134 @@
   display: flex;
   height: 100px;
   width: 100%;
+  position: relative;
+
+  @media screen and (max-width: 768px) {
+    padding-top: 11px;
+    height: auto;
+  }
+
+  &__hamburger-btn {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    width: 33px;
+    height: 25px;
+    background: transparent;
+    border: none;
+    position: absolute;
+    top: 50%;
+    left: 0%;
+    transform: translateY(-50%);
+
+    @media screen and (max-width: 1221px) {
+      display: flex;
+    }
+
+    @media screen and (max-width: 768px) {
+      width: 25px;
+      height: 17px;
+    }
+
+    span {
+      width: 100%;
+      height: 5px;
+      background-color: $dark-blue;
+      transition: all 0.5s;
+
+
+      @media screen and (max-width: 768px) {
+        height: 3px;
+      }
+    }
+
+    &.active {
+      justify-content: center;
+
+      span:nth-child(1) {
+        transform: rotate(42deg) translate(3px, 3px);
+      }
+
+      span:nth-child(2) {
+        display: none;
+      }
+
+      span:nth-child(3) {
+        transform: rotate(-42deg) translate(0px,0px);
+      }
+    }
+  }
 
   &__logo {
     display: flex;
     align-items: center;
     padding-bottom: 14px;
+    margin-right: auto;
+
+    @media screen and (max-width: 1221px) {
+      margin-left: auto;
+      padding-bottom: 0;
+    }
+
+    @media screen and (max-width: 768px) {
+      svg {
+        width: 114.01px;
+        height: 24.01px;
+      }
+    }
   }
 
   &__menu {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    margin-left: 13%;
-    margin-right: 8%;
+    width: fit-content;
     list-style: none;
+    margin-right: auto;
 
-    li a {
-      color: $purple;
-      display: inline-flex;
-      position: relative;
+    @media screen and (max-width: 1340px) {
+      margin-right: 0;
+    }
 
-      &::after {
-        content: '';
-        position: absolute;
-        bottom: -10px;
-        width: 100%;
-        height: 3px;
-        background-color: transparent;
-        transition: all 0.2s;
-      }
+    @media screen and (max-width: 1221px) {
+      display: none;
+    }
+
+    li:nth-last-child(1) {
+      margin-right: 0;
+    }
+
+    li {
+      margin-right: 54px;
       
-      &:hover {
-        color: $blue;
+      @media screen and (max-width: 1340px) {
+        margin-right: 27px;
+      }
 
+      a {
+        color: $purple;
+        display: inline-flex;
+        position: relative;
+        font-size: 21px;
+        line-height: 26px;
+  
         &::after {
-          background-color: $purple;
-          bottom: -3px;
+          content: '';
+          position: absolute;
+          bottom: -10px;
+          width: 100%;
+          height: 3px;
+          background-color: transparent;
+          transition: all 0.2s;
+        }
+        
+        &:hover {
+          color: $blue;
+  
+          &::after {
+            background-color: $purple;
+            bottom: -3px;
+          }
         }
       }
     }
