--- a/src/scss/Pages/Main/styles.scss
+++ b/src/scss/Pages/Main/styles.scss
@@ -149,7 +149,7 @@
     background-image: url("../../../assets/pre-footer.jpg");
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover 100%;
+    background-size: 100% 100%;
     color: $white;
     margin-bottom: 25px;
 
