--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -6,5 +6,10 @@ $dark-blue: #12397C;
 $purple: #4B33A1;
 $violet: #AE2DBE;
 
-$gradient-blue-purple: linear-gradient(180deg, $blue 0%, $purple 100%);
+$green: #329E7A;
+$dark-green: #185260;
+
+
 $gradient: linear-gradient(180deg, $violet 0%, $purple 100%);
+$gradient-blue-purple: linear-gradient(180deg, $blue 0%, $purple 100%);
+$gradient-green: linear-gradient(180deg, #389A77 19.27%, #175842 100%);
