--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -22,6 +22,14 @@
 @font-face {
   font-family: "Montserrat";
   src: local("Montserrat Regular"), local("Montserrat-Regular"),
+    url("../fonts/Montserrat-MediumItalic.ttf") format("truetype");
+  font-weight: 400;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "Montserrat";
+  src: local("Montserrat Regular"), local("Montserrat-Regular"),
     url("../fonts/Montserrat-Regular.woff2") format("woff2"),
     url("../fonts/Montserrat-Regular.woff") format("woff"),
     url("../fonts/Montserrat-Regular.ttf") format("truetype");
