final: web-dev page

--- a/src/html-components/Footer2/Copyright/styles.scss
+++ b/src/html-components/Footer2/Copyright/styles.scss
@@ -1,189 +1,9 @@
 @import "../../../scss/variables";
 
-.footer.footer-theam-grean {
-  background-image: url("../../../assets/footer-2-bg_lg.jpg");
+.copyright.copyright-theam-grean {
+  background: #144562;
 
-  @media screen and (max-width: 1024px) {
-    background-image: none;
-  }
-
-  .footer__same-communications {
-    display: flex;
-    align-items: center;
-    margin-bottom: 62px;
-
-    @media screen and (max-width: 1024px) {
-      flex-direction: column-reverse;
-      margin-bottom: 30px;
-    }
-
-    .communications-form {
-      display: flex;
-      flex-direction: column;
-      width: 100%;
-      max-width: 785px;
-
-      &__title {
-        font-size: 36px;
-        line-height: 44px;
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        justify-content: center;
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        background-image: $gradient-green;
-        margin-bottom: 45px;
-
-        @media screen and (max-width: 1024px) {
-          background-image: linear-gradient(
-            180deg,
-            #fac452 19.27%,
-            #df51b0 100%
-          );
-        }
-        @media screen and (max-width: 768px) {
-          font-size: 18px;
-          line-height: 22px;
-          margin-bottom: 21px;
-        }
-      }
-    }
-
-    .img-message-decore {
-      margin-left: auto;
-      transform: translateX(-13%);
-      transform: translateY(45px);
-      align-self: flex-end;
-      min-width: 226px;
-      max-width: 526px;
-      width: 100%;
-
-      @media screen and (max-width: 1024px) {
-        flex-direction: column-reverse;
-        transform: translate(0, 0);
-        margin-right: auto;
-        margin-bottom: 40px;
-        max-width: 294px;
-      }
-
-      @media screen and (max-width: 768px) {
-        max-width: 226px;
-        height: 200px;
-      }
-    }
-
-    .form {
-      display: flex;
-      flex-direction: column;
-      background: $gradient-green;
-      box-shadow: 5px 5px 16px 5px rgba(0, 0, 0, 0.25);
-      border-radius: 21px;
-      padding: 30px 24px;
-      width: 100%;
-
-      @media screen and (max-width: 768px) {
-        max-width: 460px;
-        align-self: center;
-        padding: 13px 9px;
-        border-radius: 10px;
-      }
-
-      &__row-input {
-        display: flex;
-        width: 100%;
-        padding: 0 10px;
-
-        input {
-          width: 100%;
-          margin: 0 -10px;
-        }
-
-        input:nth-child(1) {
-          margin-right: 10px;
-        }
-        input:nth-last-child(1) {
-          margin-left: 10px;
-        }
-      }
-
-      input,
-      textarea {
-        height: 57px;
-        border-radius: 9px;
-        background: $white;
-        border: none;
-        margin-bottom: 18px;
-        padding: 12px;
-
-        &,
-        &::placeholder {
-          font-family: "Montserrat", sans-serif;
-          font-style: italic;
-          font-weight: 400;
-          font-size: 18px;
-          line-height: 22px;
-          color: #545250;
-
-          @media screen and (max-width: 768px) {
-            font-size: 0.7rem;
-          }
-        }
-
-        @media screen and (max-width: 768px) {
-          height: 23px;
-          border-radius: 5px;
-          margin-bottom: 9px;
-          padding: 5px;
-        }
-      }
-
-      textarea {
-        height: 207px;
-        border-radius: 9px;
-        margin-bottom: 30px;
-
-        @media screen and (max-width: 768px) {
-          height: 51px;
-          margin-bottom: 9px;
-        }
-      }
-
-      button {
-        align-self: center;
-        width: 181px;
-        height: 54px;
-        font-size: 18px;
-        line-height: 22px;
-        color: $white;
-
-        background: linear-gradient(180deg, #fac452 19.27%, #df51b0 100%);
-        border: 2px solid #95edd0;
-        box-sizing: border-box;
-        border-radius: 10px;
-
-        @media screen and (max-width: 768px) {
-          width: 143px;
-          height: 31px;
-          font-size: 16px;
-          line-height: 20px;
-        }
-      }
-    }
-  }
-}
-
-.footer {
-  @media screen and (max-width: 1024px) {
-    padding-bottom: 0;
-  }
-
-  .footer-theam-grean__bg-color {
-    background-color: $dark-green;
-
-    @media screen and (max-width: 1024px) {
-      padding-bottom: 43px;
-      padding-top: 30px;
-    }
+  @media screen and (max-width: 1250px) {
+    background: #185260;
   }
 }
