--- a/src/html-components/Breadcrumbs/styles.scss
+++ b/src/html-components/Breadcrumbs/styles.scss
@@ -20,7 +20,7 @@
 
   &__link:not(:last-child) {
     position: relative;
-    padding-right: 3ц0px;
+    padding-right: 30px;
     margin-right: 10px;
 
     &:after {
