--- a/src/html-components/BlogCard/styles.scss
+++ b/src/html-components/BlogCard/styles.scss
@@ -1,5 +1,5 @@
 .blog-card {
-  background: #FFFFFF;
+  background: #ffffff;
   box-shadow: 0px 0px 20px 4px rgba(0, 0, 0, 0.12);
   border-radius: 12px;
   padding: 29px;
@@ -8,6 +8,14 @@
   max-width: 503px;
   height: 479px;
 
+  @media screen and (max-width: 1024px) {
+    height: 467px;
+  }
+
+  @media screen and (max-width: 768px) {
+    height: 382px;
+    padding: 15px;
+  }
 
   &__image {
     width: 100%;
@@ -16,6 +24,11 @@
     margin-right: auto;
     margin-left: auto;
     margin-bottom: 11px;
+
+    @media screen and (max-width: 768px) {
+      height: 235px;
+      margin-bottom: 12px;
+    }
 
     img {
       object-fit: cover;
@@ -28,10 +41,30 @@
     font-size: 22px;
     line-height: 27px;
     margin-bottom: 37px;
+    color: #12397C;
+
+    @media screen and (max-width: 768px) {
+      font-size: 18px;
+      line-height: 22px;
+      margin-bottom: 12px;
+    }
   }
 
   &__text {
     overflow: hidden;
     height: 86px;
+    font-weight: 400;
+    letter-spacing: -0.02em;
+    color: #4f4f4f;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+
+    @media screen and (max-width: 768px) {
+      font-size: 16px;
+      line-height: 20px;
+      height: 60px;
+    }
   }
 }
