--- a/src/html-components/Recomendation/styles.scss
+++ b/src/html-components/Recomendation/styles.scss
@@ -8,42 +8,150 @@
     margin-bottom: 43px;
     position: relative;
 
+    @media screen and (max-width: 1024px) {
+      height: 79px;
+    }
+
+    @media screen and (max-width: 768px) {
+      height: auto;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+
     &::after {
-      content: '';
+      content: "";
       position: absolute;
       width: calc((100vw - 100% - 18px) / 2);
       height: 4px;
-      background: #BDBDBD;
+      background: #bdbdbd;
       right: 1px;
       top: 0;
       transform: translateX(100%);
+
+      @media screen and (max-width: 1024px) {
+        height: 3px;
+        width: calc((100vw - 100% - 0) / 2);
+      }
+
+      @media screen and (max-width: 768px) {
+        display: none;
+      }
     }
-    
+
     .social {
       display: flex;
       align-items: center;
       justify-content: flex-end;
 
+      @media screen and (max-width: 768px) {
+        margin-bottom: 24px;
+      }
+
       &::before {
-        content: '';
+        content: "";
         position: absolute;
         width: 100%;
         height: 4px;
-        background: #BDBDBD;
+        background: #bdbdbd;
         bottom: 0;
+
+        @media screen and (max-width: 1024px) {
+          height: 3px;
+        }
+
+        @media screen and (max-width: 768px) {
+          display: none;
+        }
+      }
+
+      .social-item_instagram svg {
+        @media screen and (max-width: 1024px) {
+          width: 22.99px;
+          height: 22.99px;
+        }
+
+        @media screen and (max-width: 768px) {
+          width: 20.26px;
+          height: 20.26px;
+        }
+      }
+      .social-item_fb svg {
+        @media screen and (max-width: 1024px) {
+          width: 14.11px;
+          height: 26.27px;
+        }
+
+        @media screen and (max-width: 768px) {
+          width: 12.44px;
+          height: 23.15px;
+        }
+      }
+      .social-item_vk svg {
+        @media screen and (max-width: 1024px) {
+          width: 27.63px;
+          height: 16.42px;
+        }
+
+        @media screen and (max-width: 768px) {
+          width: 24.35px;
+          height: 14.47px;
+        }
+      }
+      .social-item_ok svg {
+        @media screen and (max-width: 1024px) {
+          width: 18.01px;
+          height: 30.69px;
+        }
+
+        @media screen and (max-width: 768px) {
+          width: 15.87px;
+          height: 27.04px;
+        }
+      }
+      .social-item_twitter svg {
+        @media screen and (max-width: 1024px) {
+          width: 28.25px;
+          height: 23.33px;
+        }
+
+        @media screen and (max-width: 768px) {
+          width: 24.9px;
+          height: 20.56px;
+        }
       }
 
       &-item:not(:last-child) {
         margin-right: 35px;
+
+        @media screen and (max-width: 1024px) {
+          margin-right: 26px;
+        }
+
+        @media screen and (max-width: 768px) {
+          margin-right: 23px;
+        }
       }
 
       &-item svg path {
-        fill: #015FBF;
+        fill: #015fbf;
       }
     }
-    
+
     .svg-wrapper {
       margin: 0 -1px;
+
+      @media screen and (max-width: 1024px) {
+        margin: 0 -16px;
+
+        svg {
+          height: 79px;
+        }
+      }
+
+      @media screen and (max-width: 768px) {
+        display: none;
+      }
     }
 
     .btn-wrapper {
@@ -51,37 +159,52 @@
       align-items: flex-end;
       justify-content: flex-end;
       width: 100%;
-      border-top: 4px solid #BDBDBD;
+      border-top: 4px solid #bdbdbd;
+
+      @media screen and (max-width: 1024px) {
+        border-top-width: 3px;
+      }
+
+      @media screen and (max-width: 768px) {
+        border-top: none;
+        align-items: center;
+        justify-content: center;
+      }
 
       .btn-show-more-blog-items {
         display: flex;
         align-items: center;
         justify-content: center;
-      
+
         border: none;
         width: 100%;
         max-width: 386px;
         height: 62px;
-        background: #FFFFFF;
+        background: #ffffff;
         box-shadow: 0px 0px 20px 4px rgba(0, 0, 0, 0.12);
         border-radius: 12px;
-      
+
         font-weight: 500;
         font-size: 22px;
         line-height: 27px;
-      
+
         text-align: center;
         letter-spacing: -0.02em;
-      
-        color: #015FBF;
-      
+
+        color: #015fbf;
+        @media screen and (max-width: 768px) {
+          font-size: 18px;
+          line-height: 22px;
+          height: 53px;
+          max-width: 300px;
+        }
       }
     }
   }
 
   &__items-wrapper {
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(3, 1fr);
     gap: 31px;
 
     @media screen and (max-width: 1024px) {
