--- a/src/html-components/Footer/style.scss
+++ b/src/html-components/Footer/style.scss
@@ -3,11 +3,22 @@
 .footer {
   padding: 65px 0 56px 0;
   margin-bottom: 25px;
-  background-image: url("../../../assets//section-abut-bg-lg.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
   color: $white;
+  position: relative;
+
+  &__bg-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: fill;
+    }
+  }
 
   a {
     color: $white;
