--- a/src/scss/Pages/Contacts/styles.scss
+++ b/src/scss/Pages/Contacts/styles.scss
@@ -1,6 +1,15 @@
 @import "../../variables";
 
 .contacts {
+  padding: 31px 0 63px 0;
+
+  @media screen and (max-width: 1024px) {
+    padding: 32px 0 44px 0;
+  }
+  @media screen and (max-width: 768px) {
+    padding: 10px 0 12px 0;
+  }
+
   .subtitle {
     margin-top: 27px;
     margin-bottom: 52px;
@@ -9,12 +18,36 @@
     line-height: 27px;
     letter-spacing: -0.02em;
     color: $dark;
+
+    @media screen and (max-width: 1024px) {
+      margin-top: 32px;
+      margin-bottom: 32px;
+    }
+    @media screen and (max-width: 768px) {
+      font-size: 14px;
+      line-height: 16px;
+      margin-top: 6px;
+      margin-bottom: 16px;
+    }
+  }
+
+  .contacts-form {
+    margin-bottom: 75px;
+
+    @media screen and (max-width: 1024px) {
+      margin-bottom: 40px;
+    }
+    @media screen and (max-width: 768px) {
+      margin-bottom: 20px;
+    }
   }
 
   .contacts__team {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 40px;
+    margin-top: 54px;
+    margin-bottom: 80px;
 
     @media screen and (max-width: 1250px) {
       grid-template-columns: repeat(3, 1fr);
@@ -23,13 +56,24 @@
     @media screen and (max-width: 1024px) {
       grid-template-columns: repeat(2, 1fr);
       gap: 26px;
+      margin-top: 35px;
+      margin-bottom: 40px;
     }
     @media screen and (max-width: 768px) {
       gap: 10px;
+      margin-top: 17px;
+      margin-bottom: 20px;
     }
   }
+  
+  .location #map {
+    height: 550px;
 
-  .location {
-    margin-bottom: 63px;
+    @media screen and (max-width: 1024px) {
+      height: 264px;
+    }
+    @media screen and (max-width: 768px) {
+      height: 134px;
+    }
   }
 }
