--- a/src/scss/Pages/Promotion/style.scss
+++ b/src/scss/Pages/Promotion/style.scss
@@ -1,29 +1,60 @@
 @import '../../variables';
 
 .promotion {
+  padding-top: 40px;
+
   &__subtitle {
+    font-weight: 500;
+    font-size: 22px;
+    line-height: 27px;
+    letter-spacing: -0.02em;
     text-align: center;
     margin-top: 27px;
     margin-bottom: 60px;
   }
+  
   .scuba-diver-wrap {
     display: flex;
     align-items: center;
     justify-content: center;
+
+    @media screen and (max-width: 1440px) {
+      img {
+        width: 217px;
+      }
+    }
   }
 }
+
 
 .instruments-wraper {
   display: flex;
   flex-direction: column;
   position: relative;
-  height: 420px;
   padding-top: 65px;
+  padding-bottom: 40px;
 
-  svg {
+  &__bg {
     position: absolute;
+    width: 100%;
     top: 0%;
-    left: 0%;
-    right: 0%;
+    left: 0;
+
+    @media screen and (max-width: 1240px) {
+      display: none;
+    }
+  }
+
+  @media screen and (max-width: 1240px) {
+    margin-top: 34px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    background: #fff;
+    background: linear-gradient(180deg , rgba(108, 108, 108, 0.22), rgba(255, 255, 255, 1) 35%);
+  }
+
+  @media screen and (max-width: 768px) {
+    padding-top: 14px;
+    padding-bottom: 27px;
   }
 }
