--- a/src/html-components/Footer/Copyright/styles.scss
+++ b/src/html-components/Footer/Copyright/styles.scss
@@ -1,4 +1,4 @@
-@import '../../../scss/variables';
+@import "../../../scss/variables";
 
 .copyright {
   height: 198px;
@@ -19,8 +19,27 @@
   }
 
   p {
-    margin-bottom: 12px;
+    font-weight: 500;
+    font-size: 18px;
     line-height: 22px;
     text-align: center;
+    margin-bottom: 12px;
+  }
+
+  @media screen and (max-width: 768px) {
+    .logo svg {
+      width: 161.51px;
+      height: 34.01px;
+    }
+
+    p {
+      font-size: 14px;
+      line-height: 17px;
+    }
+
+    &__unic-number {
+      font-size: 18px;
+      line-height: 22px;
+    }
   }
 }
