--- a/src/html-components/Header/Nav/styles.scss
+++ b/src/html-components/Header/Nav/styles.scss
@@ -1,4 +1,4 @@
-@import '../../../scss/_variables.scss';
+@import "../../../scss/_variables.scss";
 
 .nav {
   display: flex;
@@ -40,7 +40,6 @@
       background-color: $dark-blue;
       transition: all 0.5s;
 
-
       @media screen and (max-width: 768px) {
         height: 3px;
       }
@@ -58,7 +57,7 @@
       }
 
       span:nth-child(3) {
-        transform: rotate(-42deg) translate(0px,0px);
+        transform: rotate(-42deg) translate(0px, 0px);
       }
     }
   }
@@ -103,7 +102,7 @@
 
     li {
       margin-right: 54px;
-      
+
       @media screen and (max-width: 1340px) {
         margin-right: 27px;
       }
@@ -114,9 +113,9 @@
         position: relative;
         font-size: 21px;
         line-height: 26px;
-  
+
         &::after {
-          content: '';
+          content: "";
           position: absolute;
           bottom: -10px;
           width: 100%;
@@ -124,16 +123,115 @@
           background-color: transparent;
           transition: all 0.2s;
         }
-        
+
         &:hover {
           color: $blue;
-  
+
           &::after {
             background-color: $purple;
             bottom: -3px;
           }
         }
       }
+    }
+  }
+
+  &__menu-mobile {
+    display: none;
+    position: absolute;
+    flex-direction: column;
+    align-items: flex-start;
+    top: calc(100%);
+    background: #fff;
+    z-index: 9;
+    width: calc(100% + 20px);
+    margin: 0 -10px;
+
+    .lang {
+      display: flex;
+      justify-content: flex-end;
+      position: absolute;
+      top: -19px;
+      right: 5px;
+
+      a {
+        color: #015fbf;
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 15px;
+        margin-right: 7px;
+      }
+
+      @media screen and (min-width: 768px) {
+        top: -49px;
+      }
+    }
+
+    .social {
+      display: flex;
+      padding: 10px;
+
+      .social-item {
+        display: inline-flex;
+        margin: 0 8px;
+      }
+
+      .social-item svg path {
+        fill: rgba(75, 51, 161, 1);
+      }
+    }
+
+    ul {
+      list-style: none;
+      width: 100%;
+      padding-top: 12px;
+
+      @media screen and (min-width: 768px) {
+        padding-top: 18px;
+      }
+
+      li {
+        border-bottom: 1px solid #c4c4c4;
+        padding: 6px 18px 15px 18px;
+
+        a {
+          font-weight: 500;
+          font-size: 16px;
+          line-height: 20px;
+        }
+      }
+      li > a:hover {
+        color: #015fbf;
+      }
+    }
+
+    .contact {
+      width: 100%;
+      height: 84px;
+      background-color: #12397c;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      padding: 0 18px;
+
+      div {
+        display: flex;
+        align-items: center;
+        span {
+          margin-right: 10px;
+        }
+      }
+
+      a {
+        color: #fff;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 17px;
+      }
+    }
+
+    &.active {
+      display: flex;
     }
   }
 }
