--- a/src/html-components/BlogItem/styles.scss
+++ b/src/html-components/BlogItem/styles.scss
@@ -112,7 +112,7 @@
       align-items: center;
       height: 668px;
       position: relative;
-      background-image: url('../../assets/video/gb.jpg');
+      background-image: url('./../assets/video/gb.jpg');
       background-repeat: no-repeat;
       background-size: cover;
       cursor: pointer;
