--- a/src/html-components/Footer2/style.scss
+++ b/src/html-components/Footer2/style.scss
@@ -1,7 +1,7 @@
 @import "../../scss/variables";
 
 .footer.footer-theam-grean {
-  background-image: url("../../../assets/footer-2-bg_lg.jpg");
+  background-image: url("./../assets/footer-2-bg_lg.jpg");
 
   @media screen and (max-width: 1250px) {
     padding-top: 0;
